--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .eslintrc.js --fix",
   },
   "author": "",
   "license": "ISC"
