--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "eslint-config-airbnb": "^18.0.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-    "lint": "eslint .eslintrc.js --fix",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .eslintrc.js --fix"
   },
   "author": "",
   "license": "ISC"
